# project_template

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yaml
.claude/agents/: backend-developer.md  frontend-developer.md
.claude/skills/backend-architecture/: SKILL.md
.claude/skills/backend-async-conventions/: SKILL.md
.claude/skills/backend-exceptions/: SKILL.md
.claude/skills/backend-sqlalchemy-models/: SKILL.md
.claude/skills/frontend-scrolling-conventions/: SKILL.md
.claude/skills/frontend-state-and-api/: SKILL.md
.claude/skills/frontend-styling-conventions/: SKILL.md
.claude/skills/frontend-vue-patterns/: SKILL.md
.github/scripts/: validate-dependency-flow.py
.github/workflows/: ci.yml
backend/: .coveragerc  .env  .env.example  Dockerfile  __init__.py  example.env  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/api/: __init__.py  app.py  dependencies.py  exceptions.py  schemas.py  security.py
backend/api/routes/: __init__.py  auth.py  user.py
backend/core/: __init__.py  logging.py  sentry.py  settings.py  utils.py
backend/domain/: __init__.py  celery_app.py  celery_tasks.py  taskiq_broker.py  taskiq_middleware.py  taskiq_tasks.py
backend/manifests/: db.yaml  deploy_backend.yaml  deploy_worker.yaml
backend/repository/: __init__.py  base_model.py  connection.py  models.py
backend/repository/alembic/: env.py
backend/repository/alembic/versions/: fa6da367b863_init.py
backend/service/: __init__.py  auth_service.py  base_service.py  exceptions.py  security.py  user_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/test_api/: test_health.py
backend/tests/test_domain/: __init__.py
backend/tests/test_repository/: __init__.py
docs/: ARCHITECTURE.md
frontend/: Dockerfile  README.md  deploy_frontend.yaml  nginx.conf  package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/src/: App.vue  main.ts  shims-vue-router.d.ts
frontend/src/api/: index.ts
frontend/src/components/: ErrorNotification.vue
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/styles/: animations.css  background.css  index.css  layout.css  reset.css  scrollbar.css  typography.css  utilities.css  variables.css
frontend/src/styles/components/: buttons.css  cards.css  inputs.css
frontend/src/utils/: errors.ts
frontend/src/views/: AccountView.vue  LoginView.vue  SignupView.vue
manifests/: ingress.yaml  middleware.yaml
